--- a/project/templates/profile.html
+++ b/project/templates/profile.html
@@ -27,6 +27,12 @@
                                         <br>
                                         <small class="text-muted">
                                             {{feek.created_at}} by @{{feek.user.username}}
+                                            - {{feek.number_of_likes}} Likes -
+                                            {% if user in feek.likes.all %}
+                                                <a href="{% url "feek_like"  feek.id%}">UnLike</a>
+                                            {% else %}
+                                                <a href="{% url "feek_like"  feek.id%}">Like</a>
+                                            {% endif %}
                                         </small>
                                     </div>
                                 </div>
