Img replace liked/unlike
I used font awsome for add a heart img and replace the words like/unlike
on a post.

--- a/project/templates/profile.html
+++ b/project/templates/profile.html
@@ -29,9 +29,13 @@
                                             {{feek.created_at}} by @{{feek.user.username}}
                                             - {{feek.number_of_likes}} Likes -
                                             {% if user in feek.likes.all %}
-                                                <a href="{% url "feek_like"  feek.id%}">UnLike</a>
+                                                <a href="{% url "feek_like"  feek.id%}">
+                                                    <i class= 'fa-solid fa-heart' style='color:red'></i>
+                                                </a>
                                             {% else %}
-                                                <a href="{% url "feek_like"  feek.id%}">Like</a>
+                                                <a href="{% url "feek_like"  feek.id%}">
+                                                    <i class= 'fa fa-heart-o' style='color:red'></i>
+                                                </a>
                                             {% endif %}
                                         </small>
                                     </div>
