--- a/project/templates/home.html
+++ b/project/templates/home.html
@@ -6,7 +6,7 @@
     <div class="containter text-center">
         <div class="row">
             <div class="col-8">
-                <h1>esto es una html</h1>
+                <h1>Feeks</h1>
                 {% for feek in feeks %}
                     <div class="alert alert-dark" role="alert">
                         <div class="container">
@@ -22,24 +22,20 @@
                                     {{ feek.body }}
                                     <br>
                                     <small class="text-muted">
-                                        {{feek.created_at}} By
-                                        @{{feek.user.username}}
-                                        - {{feek.number_of_likes}} Likes
+                                        {{feek.created_at}} By @{{feek.user.username}}&nbsp;&nbsp;{{feek.number_of_likes}}
                                         {% if user in feek.likes.all %}
-                                            <a href="{% url "feek_like"  feek.id%}">
-                                                <i class= 'fa-solid fa-heart' style='color:red'></i>
-                                            </a>
+                                            <a href="{% url "feek_like"  feek.id%}"><i class= 'fa-solid fa-heart' style='color:red'></i></a>
                                         {% else %}
-                                            <a href="{% url "feek_like"  feek.id%}">
-                                                <i class= 'fa fa-heart-o' style='color:red'></i>
-                                            </a>
+                                            <a href="{% url "feek_like"  feek.id%}"><i class= 'fa fa-heart-o' style='color:red'></i></a>
                                         {% endif %}
+                                        &nbsp;
+                                        <a href="{% url "feek_show"  feek.id%}"><i class= 'fa fa-share' style='color:grey'></i></a>
                                     </small>
-                                </div>
                                 </div>
                             </div>
                         </div>
-
+                    </div>
+                    
                     <br><br>
                 {% endfor %}
             </div>
