--- a/project/templates/navbar.html
+++ b/project/templates/navbar.html
@@ -33,10 +33,19 @@
           {% endif %}
           
         </ul>
-        <form class="d-flex" role="search">
+        {% if user.is_authenticated %}
+          <ul class="navbar-nav ml-auto">
+            <li class="nav-link navbar-brand">
+              <a href={% url "profile" user.id %}><img src="{{ user.profile.profile_image.url }}" class='rounded-circle' width=30></a>
+            </li>
+          </ul>
+        {% endif %}
+        <!--
+          <form class="d-flex" role="search">
           <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
           <button class="btn btn-outline-success" type="submit">Search</button>
         </form>
+        -->
       </div>
     </div>
   </nav>
