FollowBack or Unfollow from users profile
Now in the list of followers the user can select follow back if the
profile listed is not in their followed list or they can unfollow if the
profile listed is already in their list. This funtion is only in the
user's profile.

--- a/project/templates/home.html
+++ b/project/templates/home.html
@@ -15,7 +15,7 @@
                                     {% if feek.user.profile.profile_image %}
                                         <img src="{{feek.user.profile.profile_image.url}}" class='rounded-circle' width=50 height=50 alt="{{feek.user.username}}">
                                     {% else %}
-                                        <img src="{% static '/img/asd.png' %}" class='rounded-circle' width=50 height=50 alt="{{profile.user.username}}">
+                                        <img src="{% static '/img/profile_default.png' %}" class='rounded-circle' width=50 height=50 alt="{{profile.user.username}}">
                                     {% endif %}
                                 </div>
                                 <div class="col-10">
