--- a/project/templates/navbar.html
+++ b/project/templates/navbar.html
@@ -1,3 +1,5 @@
+{% load static %}
+
 <nav class="navbar navbar-expand-lg bg-body-tertiary bg-dark" data-bs-theme="dark">
     <div class="container-fluid">
       <a class="navbar-brand" href="{% url 'home'%}">Faketter</a>
@@ -32,7 +34,11 @@
         {% if user.is_authenticated %}
           <ul class="navbar-nav ml-auto">
             <li class="nav-link navbar-brand">
-              <a href={% url "profile" user.id %}><img src="{{ user.profile.profile_image.url }}" class='rounded-circle' width=30></a>
+              {% if user.profile.profile_image %}
+                <a href={% url "profile" user.id %}><img src="{{ user.profile.profile_image.url }}" class='rounded-circle' width=30></a>
+              {% else %}
+                <a href={% url "profile" user.id %}><img src="{% static "/img/profile_default.png" %}" class='rounded-circle' width=30></a>
+              {% endif %}
             </li>
           </ul>
         {% endif %}
