--- a/project/templates/profile.html
+++ b/project/templates/profile.html
@@ -19,7 +19,7 @@
                                         {% if profile.profile_image %}
                                             <img src="{{ profile.profile_image.url}}" class='rounded-circle' width=50 height=50 alt="{{profile.user.username}}">
                                         {% else %}
-                                            <img src="{% static '/img/asd.png' %}" class='rounded-circle' width=50 height=50 alt="{{profile.user.username}}">
+                                            <img src="{% static '/img/profile_default.png' %}" class='rounded-circle' width=50 height=50 alt="{{profile.user.username}}">
                                         {% endif %}
                                     </div>
                                     <div class="col-11">
@@ -48,6 +48,8 @@
             <div class="col-4">
                 {% if profile.profile_image %}
                     <img src="{{ profile.profile_image.url }}" class='rounded-circle' width=200 height=200>
+                {% else %}
+                    <img src="{% static "/img/profile_default.png" %}" class='rounded-circle' width=200 height=200>
                 {% endif %}
 
                 <!-- mostrar los links si tiene  -->
@@ -82,15 +84,22 @@
                     </div>
                     <div class="card-body">
                         {% for following in profile.follows.all %}
+
                             {% if profile.id != following.user.id %}
+
                                 <a href="{% url "profile" following.user.id %}">
                                     <img src="{{ following.user.profile.profile_image.url}}" class='rounded-circle' width=30>&nbsp;@{{ following }}
                                 </a>&nbsp;
                                 {% if profile.id == request.user.id %}
+                                    
                                     <a href={% url "unfollow" following.user.id %}><i class="fa-solid fa-trash" style='color:grey;'></i></a>
+
                                 {% endif %}
+
                                 <br>
+
                             {% endif %}
+
                         {% endfor %}
                     </div>
                   </div>
@@ -101,11 +110,29 @@
                     </div>
                     <div class="card-body">
                         {% for following in profile.follow_by.all %}
+
                             {% if profile.id != following.user.id %}
-                                <a href="{% url "profile" following.user.id %}">
-                                    <img src="{{ following.user.profile.profile_image.url}}" class='rounded-circle' width=30>&nbsp;@{{ following }}
-                                <br>
+
+                                <a href="{% url "profile" following.user.id %}"><img src="{{ following.user.profile.profile_image.url}}" class='rounded-circle' width=30>&nbsp;@{{ following }}
+                                    
+                                    {% if request.user.id == profile.user.id %}
+
+                                            {% if following in profile.follows.all %}
+
+                                                <a href={% url "unfollow" following.user.id %}><i class="fa-solid fa-trash" style='color:grey;'></i></a>
+                                                <br>
+
+                                            {% else %}
+
+                                                <a href={% url "follow" following.user.id %}><i class="fa-solid fa-user-plus" style='color:grey;'></i></a>
+                                                <br>
+                                            {% endif %}
+                                    {% else %}
+                                        <br>
+                                    {% endif %}
+
                             {% endif %}
+
                         {% endfor %}
                     </div>
                 </div>
