--- a/project/templates/profile_list.html
+++ b/project/templates/profile_list.html
@@ -13,7 +13,7 @@
                 {% if profile.profile_image %}
                 <img src="{{ profile.profile_image.url}}" width=200 height=200 class='img-fluid rounded-start' alt={{profile.user.username}}>
                 {% else %}
-                <img src="{% static '/img/asd.png' %} " class="img-fluid rounded-start" alt="Profile Image">
+                <img src="{% static '/img/profile_default.png' %} " class="img-fluid rounded-start" alt="Profile Image">
                 {% endif %}
             </div>
             <div class="col-md-8">
