--- a/project/templates/profile.html
+++ b/project/templates/profile.html
@@ -4,6 +4,7 @@
 {% block content %}
 
 {% if profile %}
+
     <div class="containter text-center">
         <div class="row">
             
@@ -34,6 +35,10 @@
                                             {% endif %}
                                             &nbsp;
                                             <a href="{% url "feek_show"  feek.id%}"><i class= 'fa fa-share' style='color:grey'></i></a>
+                                            &nbsp;
+                                            {% if request.user.username == profile.user.username %}
+                                                <a href="{% url "delete_feek"  feek.id%}"><i class="fa-solid fa-trash" style='color:grey;'></i></a>
+                                            {% endif %}
                                         </small>
                                     </div>
                                 </div>
@@ -84,7 +89,7 @@
                     </div>
                     <div class="card-body">
                         {% for following in profile.follows.all|slice:3 %}
-
+                            
                             {% if profile.id != following.user.id %}
 
                                 <a href="{% url "profile" following.user.id %}"><img src="{{ following.user.profile.profile_image.url}}" class='rounded-circle' width=30>&nbsp;@{{ following }}</a>&nbsp;
