--- a/project/templates/navbar.html
+++ b/project/templates/navbar.html
@@ -29,6 +29,10 @@
             </li>
 
           {% endif %}
+
+          <li class="nav-item">
+            <a href="{% url "search_feek" %}" class='nav-link'>Search</a>
+          </li>
           
         </ul>
         {% if user.is_authenticated %}
