--- a/project/templates/search_feek.html
+++ b/project/templates/search_feek.html
@@ -2,23 +2,31 @@
 {% load static %}
 
 {% block content %}
-
-    <div class="containter text-center">
-        <div class="row">
-            <div class="col-8">
-                <h1>Feeks</h1>
+    <section class="container">
+        <form method='POST'>
+            {% csrf_token %}
+            <input type="text" class='form-control' name='feek_search' placeholder='Search for something...'>
+            <br>
+            <button type='submit' class='btn btn-secondary'>Search</button>
+        </form>
+    
+        {% if searched %}
+    
+            {% if feeks %}
+    
+                <p>You Searched for: {{ searched }}</p>
                 {% for feek in feeks %}
                     <div class="alert alert-dark" role="alert">
                         <div class="container">
                             <div class="row">
-                                <div class="col-2">
+                                <div class="col-1">
                                     {% if feek.user.profile.profile_image %}
                                         <img src="{{feek.user.profile.profile_image.url}}" class='rounded-circle' width=50 height=50 alt="{{feek.user.username}}">
                                     {% else %}
                                         <img src="{% static '/img/profile_default.png' %}" class='rounded-circle' width=50 height=50 alt="{{profile.user.username}}">
                                     {% endif %}
                                 </div>
-                                <div class="col-10">
+                                <div class="col-11">
                                     {{ feek.body }}
                                     <br>
                                     <small class="text-muted">
@@ -38,18 +46,14 @@
                     
                     <br><br>
                 {% endfor %}
-            </div>
-
-            <div class="col-4">
-                {% if form %}
-                    <form method='POST'>
-                        {% csrf_token %}
-                        {{ form.as_p }}
-                        <button type="submit" class="btn btn-primary">Post Feek!</button>
-                    </form>
-                {% endif %}
-            </div>
-        </div>
-    </div>
+    
+            {% else %}
+    
+                <p>You'r search for {{searched}} has 0 matches.</p>
+            {% endif %}
+    
+        {% endif %}
+    </section>
+    
 
 {% endblock content %}
